# astrobuild-api

./: LICENSE  README.md
.github/workflows/: rust.yml
gateway/: Cargo.toml  Procfile  RustConfig
gateway/src/: main.rs
gateway/src/constant/: mod.rs
gateway/src/controllers/: mod.rs
gateway/src/controllers/mutations/: mod.rs  mutations.rs
gateway/src/controllers/querys/: mod.rs  querys.rs
gateway/src/controllers/schema/: mod.rs
gateway/src/controllers/subscriptions/: mod.rs  subscriptions.rs
gateway/src/middleware/: error.rs
micro-services/auth_service/: Cargo.toml  Procfile
micro-services/auth_service/src/: main.rs
micro-services/auth_service/src/controllers/: mod.rs
micro-services/auth_service/src/controllers/schema/: mod.rs
micro-services/auth_service/src/helper/: mailer.rs  mod.rs
micro-services/auth_service/src/middleware/: cors.rs  error.rs  mod.rs
micro-services/auth_service/src/models/: mod.rs
micro-services/auth_service/src/test/: mod.rs
micro-services/builder_service/: Cargo.toml  Procfile  service.sh
micro-services/builder_service/src/: main.rs
micro-services/builder_service/src/controllers/: categories_controller.rs  features_controller.rs  mod.rs  projects_controller.rs  prototypes_controller.rs  templates_controller.rs
micro-services/builder_service/src/middleware/: error.rs  logging.rs  mod.rs
micro-services/builder_service/src/models/: categories.rs  features.rs  mod.rs  projects.rs  prototypes.rs  templates.rs
micro-services/support_service/: Cargo.toml  README.md  schema.gql
micro-services/support_service/src/: main.rs
micro-services/support_service/src/context/: mod.rs  shared.rs
(+13 files in other folders)
