[package]
name = "gateway"
version = "0.1.0"
authors = ["MedAmineFouzai <54685665+MedAmineFouzai@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = "0.2.0"
actix-web="3"
actix-rt = "1.1.0"
actix-cors = "0.5.4"
base64 = "0.13.0"
hyper = { version = "0.14", features = ["full"] }
hyper-multipart-rfc7578 = "0.5.0"
hyper_multipart = "0.2.0"
async-graphql-actix-web = "2.5.1"
async-graphql = "2.0"
thiserror = "1.0"
reqwest = { version = "0.10.0", features = ["json"] }
serde = "1.0.103"
serde_json = "1.0"
futures = "0.3.4"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.2"
load-dotenv = "0.1.2"
bson = "1.2.0"





